crates/serde-feather/tests/ui/container_duplicate_rename.stderr
error: duplicate serde container attribute `rename`
 --> tests/ui/container_duplicate_rename.rs:4:27
  |
4 | #[serde(rename = "first", rename = "second")]
  |                           ^^^^^^^^^^^^^^^^^
