crates/serde-feather/tests/ui/container_duplicate_rename.rs
use serde_feather::FeatherSerialize;

#[derive(FeatherSerialize)]
#[serde(rename = "first", rename = "second")]
struct DuplicateContainerRename {
    value: u8,
}

fn main() {}
